Bug 152123 - When clicking Menu List the chosen option is not highlighted makes the drop down "Float"
Summary: When clicking Menu List the chosen option is not highlighted makes the drop d...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Camilla Boemann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-10 18:33 UTC by Ben Kevan
Modified: 2007-12-21 19:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Kevan 2007-11-10 18:33:13 UTC
Version:           KDE 4 Beta 4 3.95 (using KDE KDE 3.95.0)
Installed from:    SuSE RPMs
OS:                Linux

Reproduce: 

Open KDE 4 Application
Click on File 
File is not highlighted but the drop down comes down

Do the same in KDE 3 and the option clicked is highlight so you know which menu you are actually dropping down. 

Hope that makes sense. Makes it hard when I cannot attach a picture
Comment 1 Thomas McGuire 2007-11-10 18:45:39 UTC
This is a bug in the oxygen style, but I don't know which product/component oxygen is.
Comment 2 FiNeX 2007-11-15 16:27:57 UTC
I confirm this issue. It should be fixed.
Comment 3 Camilla Boemann 2007-11-21 15:27:40 UTC
Menus are not being done at all for 4.0
Comment 4 Camilla Boemann 2007-12-21 19:08:59 UTC
SVN commit 751329 by boemann:

- Add bg gradient to menus
- Finalize the look of selected menuitems

BUG:152123


 M  +48 -18    oxygen.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751329