- Add bg gradient to menus - Finalize the look of selected menuitems

BUG:152123

svn path=/trunk/KDE/kdebase/runtime/kstyles/; revision=751329